--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "jade": "^1.11.0",
+    "method-override": "^2.3.10",
     "morgan": "^1.9.0",
     "mysql": "^2.15.0",
     "nodemon": "^1.17.4"
